--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,17 @@
 DD_API_KEY=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
+AWS_REGION=
 POSTGRES_USER=sentry
 POSTGRES_PASSWORD=
+SPLUNK_TOKEN=
+SPLUNK_PASSWORD=
+
+SENTRY_DSN=
+
+# only for local sentry installation
 SENTRY_SECRET_KEY=
 SENTRY_DB_USER=
 SENTRY_DB_PASSWORD=
+SENTRY_HOST=
+SENTRY_PORT=
