--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,12 @@ services:
       - DD_API_KEY
       - AWS_ACCESS_KEY_ID
       - AWS_SECRET_ACCESS_KEY
+      - AWS_XRAY_DAEMON_HOST=awsxraydaemon
+      - AWS_XRAY_DAEMON_PORT=2000
+      - SENTRY_DSN
+      - SPLUNK_HOST=splunk
+      - SPLUNK_PORT=8088
+      - SPLUNK_TOKEN
     ports:
       - '8001:8001'
 
@@ -48,6 +54,8 @@ services:
       - DD_API_KEY
       - AWS_ACCESS_KEY_ID
       - AWS_SECRET_ACCESS_KEY
+      - AWS_XRAY_DAEMON_HOST=awsxraydaemon
+      - AWS_XRAY_DAEMON_PORT=2000
     ports:
       - '8002:8002'
 
@@ -71,6 +79,8 @@ services:
       - DD_API_KEY
       - AWS_ACCESS_KEY_ID
       - AWS_SECRET_ACCESS_KEY
+      - AWS_XRAY_DAEMON_HOST=awsxraydaemon
+      - AWS_XRAY_DAEMON_PORT=2000
     ports:
       - '8003:8003'
 
@@ -94,6 +104,8 @@ services:
       - DD_API_KEY
       - AWS_ACCESS_KEY_ID
       - AWS_SECRET_ACCESS_KEY
+      - AWS_XRAY_DAEMON_HOST=awsxraydaemon
+      - AWS_XRAY_DAEMON_PORT=2000
     ports:
       - '8004:8004'
 
@@ -117,6 +129,8 @@ services:
       - DD_API_KEY
       - AWS_ACCESS_KEY_ID
       - AWS_SECRET_ACCESS_KEY
+      - AWS_XRAY_DAEMON_HOST=awsxraydaemon
+      - AWS_XRAY_DAEMON_PORT=2000
     ports:
       - '8005:8005'
 
@@ -155,45 +169,77 @@ services:
     ports:
       - '5432:5432/tcp'
 
-  sentry:
-    image: sentry
-    environment:
-      - SENTRY_SECRET_KEY
-      - SENTRY_POSTGRES_HOST=postgres
-      - SENTRY_POSTGRES_PORT=5432
-      - SENTRY_DB_NAME=sentry
-      - SENTRY_DB_USER
-      - SENTRY_DB_PASSWORD
-      - SENTRY_REDIS_HOST=redis
-      - SENTRY_REDIS_PORT=6379
-      - SENTRY_REDIS_DB=0
+  # sentry:
+  #   image: sentry
+  #   environment:
+  #     - SENTRY_SECRET_KEY
+  #     - SENTRY_POSTGRES_HOST=postgres
+  #     - SENTRY_POSTGRES_PORT=5432
+  #     - SENTRY_DB_NAME=sentry
+  #     - SENTRY_DB_USER
+  #     - SENTRY_DB_PASSWORD
+  #     - SENTRY_REDIS_HOST=redis
+  #     - SENTRY_REDIS_PORT=6379
+  #     - SENTRY_REDIS_DB=0
+  #     - SENTRY_EMAIL_HOST=mailcatcher
+  #     - SENTRY_EMAIL_PORT=1025
+  #   ports:
+  #     - '8089:9000'
+
+  # sentrycron:
+  #   image: sentry
+  #   command: sentry run cron
+  #   environment:
+  #     - SENTRY_SECRET_KEY
+  #     - SENTRY_POSTGRES_HOST=postgres
+  #     - SENTRY_POSTGRES_PORT=5432
+  #     - SENTRY_DB_NAME=sentry
+  #     - SENTRY_DB_USER
+  #     - SENTRY_DB_PASSWORD
+  #     - SENTRY_REDIS_HOST=redis
+  #     - SENTRY_REDIS_PORT=6379
+  #     - SENTRY_REDIS_DB=0
+  #     - SENTRY_EMAIL_HOST=mailcatcher
+  #     - SENTRY_EMAIL_PORT=1025
+
+  # sentryworker:
+  #   image: sentry
+  #   command: sentry run worker
+  #   environment:
+  #     - SENTRY_SECRET_KEY
+  #     - SENTRY_POSTGRES_HOST=postgres
+  #     - SENTRY_POSTGRES_PORT=5432
+  #     - SENTRY_DB_NAME=sentry
+  #     - SENTRY_DB_USER
+  #     - SENTRY_DB_PASSWORD
+  #     - SENTRY_REDIS_HOST=redis
+  #     - SENTRY_REDIS_PORT=6379
+  #     - SENTRY_REDIS_DB=0
+  #     - SENTRY_EMAIL_HOST=mailcatcher
+  #     - SENTRY_EMAIL_PORT=1025
+
+  mailcatcher:
+    build:
+      context: mailcatcher
+    command: mailcatcher --http-ip 0.0.0.0 && tail -f /dev/null
     ports:
-      - '8089:9000'
+      - '1080:1080'
+      - '1025:1025'
 
-  sentrycron:
-    image: sentry
-    command: sentry run cron
+  splunk:
+    image: splunk/splunk
     environment:
-      - SENTRY_SECRET_KEY
-      - SENTRY_POSTGRES_HOST=postgres
-      - SENTRY_POSTGRES_PORT=5432
-      - SENTRY_DB_NAME=sentry
-      - SENTRY_DB_USER
-      - SENTRY_DB_PASSWORD
-      - SENTRY_REDIS_HOST=redis
-      - SENTRY_REDIS_PORT=6379
-      - SENTRY_REDIS_DB=0
+      - SPLUNK_PASSWORD
+      - SPLUNK_START_ARGS=--accept-license
+    ports:
+      - '8090:8000'
+      - '8088:8088'
 
-  sentryworker:
-    image: sentry
-    command: sentry run worker
+  awsxraydaemon:
+    image: amazon/aws-xray-daemon
     environment:
-      - SENTRY_SECRET_KEY
-      - SENTRY_POSTGRES_HOST=postgres
-      - SENTRY_POSTGRES_PORT=5432
-      - SENTRY_DB_NAME=sentry
-      - SENTRY_DB_USER
-      - SENTRY_DB_PASSWORD
-      - SENTRY_REDIS_HOST=redis
-      - SENTRY_REDIS_PORT=6379
-      - SENTRY_REDIS_DB=0
+      - AWS_ACCESS_KEY_ID
+      - AWS_SECRET_ACCESS_KEY
+      - AWS_REGION
+    ports:
+      - '2000:2000'
