--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,9 @@ DD_API_KEY=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_REGION=
+AWS_LOG_GROUP_NAME=
+AWS_LOG_STREAM_NAME=
+AWS_REGION=
 POSTGRES_USER=sentry
 POSTGRES_PASSWORD=
 SPLUNK_TOKEN=
